cabal-version:   1.18
name:            project-jumper
version:         0.0.1.0
license:         BSD3
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==8.6.5 ghc ==8.8.4 ghc ==8.10.2
homepage:        https://github.com/mrkkrp/project-jumper
bug-reports:     https://github.com/mrkkrp/project-jumper/issues
synopsis:        A utility for jumping to local project directories
description:     A utility for jumping to local project directories.
category:        CLI
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mmark-md/mmark-cli.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

executable project-jumper
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    Paths_project_jumper
    default-language: Haskell2010
    build-depends:
        ansi-terminal >=0.10 && <1.0,
        base >=4.12 && <5.0,
        filepath >=1.2 && <1.5,
        gitrev >=1.3 && <1.4,
        optparse-applicative >=0.14 && <0.17,
        path >=0.7 && <1.0,
        path-io >=1.6 && <2.0,
        text >=0.2 && <1.3,
        text-metrics >=0.3 && <1.0

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wcompat -Wincomplete-record-updates
            -Wincomplete-uni-patterns -Wnoncanonical-monad-instances

    else
        ghc-options: -O2 -Wall
